--- a/mastishk/src/app/login/login.page.html
+++ b/mastishk/src/app/login/login.page.html
@@ -59,7 +59,7 @@
             <ion-button class="btnSocial ion-no-padding" (click)="goToDashboard()">
               <img src="../../assets/google.svg" />
             </ion-button>         
-            <ion-button class="btnSocial ion-no-padding" (click)="goToSelfScreening()">
+            <ion-button class="btnSocial ion-no-padding" (click)="goToDashboard()">
               <img src="../../assets/facebook.svg" />
             </ion-button>
           </div>
