--- a/mastishk/src/app/self/self.page.html
+++ b/mastishk/src/app/self/self.page.html
@@ -5,85 +5,52 @@
 </ion-header>
 
 <ion-content class="ion-padding content-bg">
-  <ol class="questions">
-    <li>
-      <span class="questionLabel">Self Question 1?</span>
-      <ion-card class="card">
-        <ion-card-content class="cardContent workerProfile">
-          <ion-list lines="none">
-            <ion-radio-group value="biff">
-              <ion-item class="no-ripple">
-                <ion-label>Q-1 Option 1</ion-label>
-                <ion-radio color="primary" slot="start" value="option-1-1"></ion-radio>
-              </ion-item>
 
-              <ion-item class="no-ripple">
-                <ion-label>Q-1 Option 2</ion-label>
-                <ion-radio slot="start" value="option-1-2"></ion-radio>
-              </ion-item>
-
-              <ion-item class="no-ripple">
-                <ion-label>Q-1 Option 3</ion-label>
-                <ion-radio slot="start" value="option-1-3"></ion-radio>
-              </ion-item>
-            </ion-radio-group>
-          </ion-list>
-        </ion-card-content>
-      </ion-card>
-    </li>
-    <li>
-      <span class="questionLabel">Self Question 2?</span>
-      <ion-card class="card">
-        <ion-card-content class="cardContent workerProfile">
-          <ion-list lines="none">
-            <ion-radio-group value="biff">
-              <ion-item class="no-ripple">
-                <ion-label>Q-2 Option 1</ion-label>
-                <ion-radio  color="primary" slot="start" value="option-2-1"></ion-radio>
-              </ion-item>
-
-              <ion-item class="no-ripple">
-                <ion-label>Q-2 Option 2</ion-label>
-                <ion-radio slot="start" value="option-2-2"></ion-radio>
-              </ion-item>
-
-              <ion-item class="no-ripple">
-                <ion-label>Q-2 Option 3</ion-label>
-                <ion-radio slot="start" value="option-2-3"></ion-radio>
-              </ion-item>
-            </ion-radio-group>
-          </ion-list>
-        </ion-card-content>
-      </ion-card>
-    </li>
-    <li>
-      <span class="questionLabel">Self Question 3?</span>
-      <ion-card class="card">
-        <ion-card-content class="cardContent workerProfile">
-          <ion-list lines="none">
-            <ion-radio-group value="biff">
-              <ion-item class="no-ripple">
-                <ion-label>Q-3 Option 1</ion-label>
-                <ion-radio  color="primary" slot="start" value="option-3-1"></ion-radio>
-              </ion-item>
-
-              <ion-item class="no-ripple">
-                <ion-label>Q-3 Option 2</ion-label>
-                <ion-radio slot="start" value="option-3-2"></ion-radio>
-              </ion-item>
-
-              <ion-item class="no-ripple">
-                <ion-label>Q-3 Option 3</ion-label>
-                <ion-radio slot="start" value="option-3-3"></ion-radio>
-              </ion-item>
-            </ion-radio-group>
-          </ion-list>
-        </ion-card-content>
-      </ion-card>
-    </li>
-  </ol>
-  <div class="btmBtnWrap">
-    <ion-button type="submit" class="button-round btncolorprimary blueColor">Submit</ion-button>
+  
+<div class="progress">
+  <div class="numberCounts">
+    <span class="backPage"><ion-icon name="chevron-back-outline"></ion-icon></span>
+    <div class="numbers"><span class="activeNo">01</span><span class="devider">/</span><span class="totalPageNo">04</span></div>
   </div>
+  <div class="pageSteps">
+    <span style="width: 25%;"></span>
+  </div>
+</div>
+<div class="questionContainer">
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit?</p>
+  <div class="infoTxt">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+</div>
+
+<div class="qstOptionContainer questions">
+  
+  <ion-list lines="none">
+    <ion-radio-group value="biff">
+      <ion-item >
+        <ion-label>Q-1 Option 1</ion-label>
+        <ion-radio color="primary" slot="start" value="option-1-1"></ion-radio>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Q-1 Option 2</ion-label>
+        <ion-radio slot="start" value="option-1-2"></ion-radio>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Q-1 Option 3</ion-label>
+        <ion-radio slot="start" value="option-1-3"></ion-radio>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Lorem ipsum dolor sit amet</ion-label>
+        <ion-radio slot="start" value="option-1-4"></ion-radio>
+      </ion-item>
+
+    </ion-radio-group>
+  </ion-list>
+</div>
+
+<div class="qstOptionFooter">
+  <ion-button type="button" class="button-round btncolorprimary blueColor">Next <ion-icon name="chevron-forward-outline"></ion-icon></ion-button>
+</div>
 
 </ion-content>
